--- a/src/Components/TaskCard/TaskCard.module.css
+++ b/src/Components/TaskCard/TaskCard.module.css
@@ -1,5 +1,4 @@
 .taskContainer {
-    background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     padding: 1.5rem;
@@ -9,8 +8,9 @@
     width: 100%;
     max-width: 300px;
     margin: 1rem auto;
-    border: 1px solid #ddd;
-    background-color: #fafafa;
+    background-color: var(--card-background-color);
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
 }
 
 .taskItem {
@@ -28,13 +28,13 @@
 .taskText {
     font-size: 1.2rem;
     font-weight: bold;
-    color: #333;
+    color: var(--text-color);
     margin: 0;
 }
 
 .taskDescription {
     font-size: 1rem;
-    color: #555;
+    color: var(--secondary-text-color);
     margin: 0;
 }
 
@@ -62,11 +62,10 @@
 .statusSelect {
     padding: 0.5rem;
     border-radius: 8px;
-    border: 1px solid #ccc;
-    background-color: #f5f5f5;
     font-size: 1rem;
-    /* width: 100px; */
-    color: #555;
+    background-color: var(--input-background-color);
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
 }
 
 .deleteBtnTask {
